<?xml version="1.0" encoding="utf-8"?>
<!-- 
  Secu3Droid - An open source, free manager for SECU-3 engine
  control unit
  Copyright (C) 2013 Maksim M. Levin. Russia, Voronezh
  
  SECU-3  - An open source, free engine control unit
  Copyright (C) 2007 Alexey A. Shabelnikov. Ukraine, Gorlovka
 
  This program is free software: you can redistribute it and/or modify
  it under the terms of the GNU General Public License as published by
  the Free Software Foundation, either version 3 of the License, or
  (at your option) any later version.
 
  This program is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  GNU General Public License for more details.
 
  You should have received a copy of the GNU General Public License
  along with this program.  If not, see <http://www.gnu.org/licenses/>.
 
  contacts:
             http://secu-3.org
             email: mmlevin@mail.ru
-->

<menu xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:android="http://schemas.android.com/apk/res/android">
	<item android:id="@+id/menu_dashboard" android:title="@string/menu_dashboard" app:showAsAction="never" android:icon="@android:drawable/ic_menu_preferences"/>
	<item
		android:id="@+id/menu_preferences"
		android:icon="@android:drawable/ic_menu_preferences"
		android:title="@string/menu_preferences"
		app:showAsAction="never" />
	<item
		android:id="@+id/menu_params"
		android:icon="@android:drawable/ic_menu_manage"
		android:title="@string/menu_param"
		android:visible="true"
		app:showAsAction="ifRoom" />
	<item
		android:id="@+id/menu_errors"
		android:icon="@drawable/ic_menu_errors"
		android:title="@string/menu_errors"
		app:showAsAction="ifRoom" />
	<item android:id="@+id/menu_diagnostics" android:title="@string/menu_diagnostics" app:showAsAction="never" android:icon="@android:drawable/ic_menu_agenda"/>
	<item android:id="@+id/menu_raw_sensors" android:title="@string/menu_raw_sensors" app:showAsAction="never" android:checkable="true"/>
	<item android:id="@+id/menu_exit" android:title="@string/menu_exit" app:showAsAction="never" android:icon="@android:drawable/ic_menu_close_clear_cancel"/>
</menu>

